# to-to-in-memory

./: .coverage  .gitignore  CLAUDE.md  README.md  SETUP.md  add-buttons.ps1  build.sh  demo.py  install-kubectl-ai.sh  package-lock.json  pyproject.toml  start.sh  tasks.json
.claude/agents/: evolution-todo-architect.md
.claude/agents/subagents/: backend-api-architect.md
.claude/skills/: INSTALLATION.md  README.md  mcp-server.js
.claude/skills/ai-integration/: SKILL.md  ai-skills.md  auth-skills.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/setup-phase/: SKILL.md
.claude/skills/start-backend/: SKILL.md
.claude/skills/start-frontend/: SKILL.md
.claude/skills/verify-setup/: SKILL.md
.specify/memory/: constitution.md
backend/: .env  .env.example  CLAUDE.md  Dockerfile  auth.py  db.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: Header.tsx  TaskItem.tsx  TaskList.tsx
frontend/lib/: api.ts
history/adr/: 0001-containerization-strategy-with-multi-stage-docker-builds.md  0002-local-kubernetes-platform-selection.md  0003-package-management-with-helm-charts.md  0004-database-persistence-strategy.md  0005-service-exposure-with-nodeport.md  0006-deployment-automation-with-shell-scripts.md
history/prompts/001-todo-in-memory/: 0004-suggest-architectural-decisions.adr.prompt.md  0005-commit-and-push-feature-documentation.green.prompt.md
history/prompts/003-local-k8s-deployment/: 0001-create-phase-iv-kubernetes-deployment-spec.spec.prompt.md  0002-create-constitution-and-phase-iv-specs.plan.prompt.md  (+2 more)
legacy/: main.py
legacy/src/: tasks.json
phase-2-nextjs/: docker-compose.yml
phase-2-nextjs/backend/: .env.example  README.md  __init__.py  agent.py  db.py  main.py  mcp_server.py  migrate.py  models.py  pyproject.toml  verify_db.py  verify_key.py
phase-2-nextjs/backend/routes/: chat.py  health.py  tasks.py
phase-2-nextjs/frontend/: CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json
phase-3-chatbot/: QUICKSTART.md  __init__.py  database.db  database_v2.db  inspect_db.py
phase-3-chatbot/backend/: .dockerignore  Dockerfile  __init__.py  agent.py  database.py  database_v2.db  main.py  mcp_server.py  models.py  requirements.txt
phase-3-chatbot/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
phase-3-chatbot/specs/: overview.md
phase-4-local-deployment/: .env.example  AI-ASSISTED-DEPLOYMENT.md  QUICKSTART.md  README.md  SETUP-AI-TOOLS.md  deploy-to-minikube.sh
phase-4-local-deployment/docker/: .env.example  README.md  docker-compose.yml
phase-4-local-deployment/docs/: AI-DEVOPS.md  ARCHITECTURE.md  TROUBLESHOOTING.md
phase-4-local-deployment/scripts/: README.md  build-images.sh  cleanup.sh  deploy-helm.sh  deploy-k8s.sh  deploy-kubectl.sh  setup-minikube.sh  verify-deployment.sh
phase-4-local-deployment/tests/: README.md  test_deployment.sh  test_functionality.sh
specs/: architecture.md  overview.md
specs/001-todo-in-memory/: tasks.md
specs/002-add-persistence/: plan.md  spec.md  tasks.md
specs/003-local-k8s-deployment/: plan.md  spec.md  tasks.md
specs/api/: rest-endpoints.md
specs/database/: schema.md
specs/features/: authentication.md  task-crud.md
specs/ui/: components.md  pages.md
src/todo/cli/: app.py  (+1 more)
tests/integration/: test_cli.py
tests/unit/: test_task_service.py
(+108 files in other folders)
